Fix alternating rows in dark mode 🧛‍♀️

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -65,4 +65,18 @@ tr:nth-of-type(2n-1) td {
         font-weight: 300;
         line-height: 1.3;
     }
+  @media (prefers-color-scheme: dark) {
+    body {
+        background: #333;
+        color: mintcream;
+        font-weight: 300;
+        line-height: 1.3;
+    }
+  
+    tr:nth-of-type(2n-1) td {
+      color: #333;
+    }
+}
+
+  
 }
